# the-search-thing-gpui

./: Cargo.toml
src/: input_dialog.rs  lib.rs  main.rs  native_sidecar.rs  settings.rs  side_column.rs
src/ipc/: framing.rs  mod.rs  native_proto.rs
