[package]
name = "gpui-port-tst"
version = "0.1.0"
edition = "2024"
default-run = "gpui-port-tst"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ipc-compare"
path = "src/bin/ipc_compare.rs"

[dependencies]
the_search_thing = { path = ".." }
gpui = { package = "gpui-ce", version = "*" }
unicode-segmentation = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
thiserror = "2"
